# rdkvhal-devicesettings-raspberrypi4

./: AVMANAGEMENT_ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  asd  change_resolution.c  dsAudio.c  dsAudioSettings.h  dsAudioSettingsData.c  dsBrcmVideoCorePin.c  dsCompositeIn.c  dsConfig.c  dsConfig.h  dsDefinitions.c  dsDefinitions.h  dsDisplay.c  dsFPD.c  dsFPDSettings.h  dsFPDSettingsData.c  dsHdmiIn.c  dsHost.c  dsSingletonGuard.c  dsTVSvcClient.c  dsTVSvcClient.h  dsTVSvcDaemon.c  dsTVSvcProto.h  dsVideoDevice.c  dsVideoDeviceSettings.h  dsVideoDeviceSettingsData.c  dsVideoPort.c  dsVideoPortSettings.h  dsVideoPortSettingsData.c  dsVideoResolutionSettings.c  dsVideoResolutionSettings.h  dsVideoResolutionSettingsData.c  dshal-b71fe4e.tgz  dshal-new.tgz  dshalEdidParser.c  dshalEdidParser.h  (+11 more)
config/: asound.conf
systemd/: dshal-tvsvc.service  rpiAudioSoftvol.service  rpiDisplay.service
tests/: CMakeLists.txt  testHdmiConnectionMonitor.c  testResolutionChange.c
